--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "geist": "^1.5.1",
+    "isomorphic-dompurify": "^3.0.0-rc.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
